syntax = "proto3";

package AutomateDesign;
option csharp_namespace = "AutomateDesign.Protos";

import "helpers.proto";

service Documents {
  rpc GetAllHeaders (Nothing) returns (stream EncryptedDocumentChunk);
  rpc GetDocument (DocumentIdOnly) returns (stream EncryptedDocumentChunk);

  rpc SaveHeader (EncryptedDocumentChunk) returns (Nothing);
  rpc SaveDocument (stream EncryptedDocumentChunk) returns (DocumentIdOnly);

  rpc DeleteDocument (DocumentIdOnly) returns (Nothing);
}

message DocumentIdOnly {
  int32 documentId = 1;
}

message EncryptedDocumentChunk {
  int32 documentId = 1;
  bytes data = 2;
}
